# openclaw-automation-kit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GEMINI.md  HANDOFF.md  INPROCESS.md  LEARNINGS.md  LICENSE  README.md  SECURITY.md  full_test_suite.py  log_run.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_codex_regression.sh  run_full_suite.sh  run_sin_tests.py  run_sin_wrapper.sh  test_integration_united.py  test_results.json
.github/: PULL_REQUEST_TEMPLATE.md
_test_browser_agent/: browser_agent.py
connectors/: README.md
docs/: API_DESIGN.md  AUTOMATION_PLANS.md  AUTOMATION_PROMOTION.md  CAPTCHA_HUMAN_LOOP.md  CONFIGURATION.md  CREDENTIALS_AND_2FA.md  CREDENTIAL_SETUP.md  DEVELOPER_SETUP.md  MESSAGING_HUMAN_LOOP_SETUP.md  NEW_AUTOMATION_PLAYBOOK.md  OPENCLAW_MARKETPLACE.md  PRIVATE_TESTING.md  QUEUE_AND_LOCKING.md  REGRESSION_TIERS.md  SCREENSHOT_LINKS.md  SCRIPT_CONTRACT.md  STARTER_EXAMPLES.md  UNIVERSAL_MEMORY_SKILL.md
examples/: README.md
schemas/: manifest.schema.json  run-request.schema.json  universal_memory.sql
scripts/: collect_automation_status.py  daily_award_scan.py  daily_health_check.py  e2e_no_login_smoke.sh  run_daily_award_scan.sh  run_example.sh  serve_artifacts.py
status/: automation_status.json  daily_results.json  run_log.jsonl  smoke_inputs.json
tests/: test_adaptive.py  test_airline_award_window_rules.py  test_award_runners.py  test_browser_agent_adapter.py  test_cdp_lock.py  test_contract_validation.py  test_credentials.py  test_demo_chat_app.py  (+19 more)
(+110 files in other folders)
