[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-automation"
version = "0.1.0"
description = "Contract-first browser automation framework for OpenClaw scripts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenClaw Automation Contributors"}]
license = {text = "MIT"}
dependencies = [
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
openclaw-automation = "openclaw_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
